La til initiell støtte for 'feilretting'(kun for Stopp periode)
